# django-hashtag

./: .coveragerc  .gitignore  MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements.txt  runtests.py  setup.cfg
.github/workflows/: ci.yml
django_hashtag/: admin.py  apps.py  models.py
django_hashtag/migrations/: 0001_initial.py  0004_hahstags_related_name_rename_to_tagged_items.py  0005_reformat_hashtag_as_plaintext.py  0006_default_verbose_name_for_taggeditem.py
example_project/example_project/: settings.py
src/django_hashtag/: __init__.py  apps.py
src/django_hashtag/migrations/: 0002_change_to_m2m_hashtags.py  0003_hashtag_count.py
src/django_hashtag/templates/: tagged-item-inline.html
tests/: test_admin.py  test_models.py  test_settings.py
tests/test_app/: admin.py  models.py
tests/test_project/test_app/: admin.py  models.py
tests/test_project/test_app/migrations/: 0001_initial.py
tests/test_project/test_project/: settings.py
