[metadata]
name = django-hashtag
version = 0.1.0
long_description = file: README.md, LICENSE.txt
url = https://github.com/genosltd/django-hashtag
author = Genadij Razdorov
author_email = genadijrazdorov@gmail.com
clasifiers = 
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Framework :: Django
    Development Status :: 3 - Alpha

[options]
packages = find:
install_requires =
    django >= 3.1
