[metadata]
name = django-hashtag
long_description = file: README.md, LICENSE.txt
url = https://github.com/genosltd/django-hashtag
author = Genadij Razdorov
author_email = genadijrazdorov@gmail.com
clasifiers = 
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Framework :: Django
    Development Status :: 3 - Alpha

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    django ~= 3.2

[options.packages.find]
where = src
